hphp/hack/test/typecheck/unbound_name/method_caller.php.exp
ERROR: File "method_caller.php", line 11, characters 15-22:
Unbound name: `NotFound` (an object type) (Naming[2049])
ERROR: File "method_caller.php", line 11, characters 15-22:
Unbound name (typing): `NotFound` (Typing[4107])
